[package]
name = "lightstep-tracer-macros"
version = "0.1.0"
authors = ["Richo Healey <richo@lightstep.com>"]
edition = "2018"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0.16", features = ["full"] }
quote = "1.0.2"
proc-macro2 = "1.0.9"
lazy_static = "1.4.0"
